Fix post list cover image not aligned

--- a/source/css/post-list.css
+++ b/source/css/post-list.css
@@ -167,4 +167,5 @@
   min-width: 180px;
   width: 20vw;
   border-radius: 16px;
+  flex-shrink: 0;
 }
